# better-ucsd-sets

./: .gitignore  README.md  pyproject.toml  sets_data_cleaner.py  sets_eval.ipynb  sets_scraper.py
csv/Analytical Writing Program/: AWP10.csv  AWP10R.csv  AWP3.csv  AWP4A.csv  AWP4B.csv
csv/Anthropology/: ANAR100.csv  ANAR104.csv  ANAR117.csv  ANAR120.csv  ANAR121.csv  ANAR135.csv  ANAR144.csv  ANAR146R.csv  ANAR156.csv  ANAR166.csv  ANBI100.csv  ANBI112.csv  ANBI116.csv  ANBI118.csv  ANBI120.csv  ANBI131.csv  ANBI136.csv  ANBI141.csv  ANBI143.csv  ANBI143GS.csv  ANBI144GS.csv  ANBI145.csv  ANBI159.csv  ANBI175.csv  ANSC100.csv  ANSC105GS.csv  ANSC120.csv  ANSC121.csv  ANSC122.csv  ANSC124.csv  ANSC125.csv  ANSC125GS.csv  ANSC135.csv  ANSC139.csv  ANSC144.csv  ANSC148.csv  ANSC150.csv  ANSC164.csv  ANSC166.csv  ANSC169.csv  (+27 more)
csv/Bioengineering/: BENG1.csv  BENG100.csv  BENG102.csv  BENG103B.csv  BENG110.csv  BENG112A.csv  BENG120.csv  BENG122A.csv  BENG123.csv  BENG126A.csv  BENG126B.csv  BENG127A.csv  BENG129B.csv  BENG130.csv  BENG133.csv  BENG134.csv  BENG135.csv  BENG140A.csv  BENG141.csv  BENG152.csv  BENG160.csv  BENG161A.csv  BENG161B.csv  BENG162.csv  BENG166A.csv  BENG168.csv  BENG179A.csv  BENG179B.csv  BENG181.csv  BENG183.csv  BENG186A.csv  BENG186B.csv  BENG187A.csv  BENG187B.csv  BENG187C.csv  BENG187D.csv  BENG189.csv  BENG191.csv  BENG2.csv  BENG87.csv
csv/Black Diaspora and African American Studies/: AAS10.csv  AAS11.csv  AAS170.csv
csv/Chemical Engineering/: CENG100.csv  CENG101A.csv  CENG101B.csv  CENG102.csv  CENG113.csv  CENG114.csv  CENG120.csv  (+9 more)
(+3501 files in other folders)
