[tool.poetry]
name = "better-ucsd-sets"
version = "1.0.0"
description = ""
authors = ["Tyler Flar <tflar@ucsd.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
selenium = "^4.21.0"
scikit-learn = "^1.5.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
